data/derived/comb/progs/unify/prog6147.ml.out
Characters 115-130:
  | (h1::tl1,h2::tl2) -> if (h1 < h2) then h1::(merge tl1,tl2)
                                               ^^^^^^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type 'c list
